fix vote page vote status overflow isses

--- a/packages/nouns-webapp/src/components/Proposals/Proposals.module.css
+++ b/packages/nouns-webapp/src/components/Proposals/Proposals.module.css
@@ -130,11 +130,12 @@
 }
 
 .proposalTitle {
-  width: 85%;
+  width: 80%;
 }
 
 .proposalStatusWrapper {
   margin-left: 0.5rem;
+  min-width: max-content;
 }
 
 .submitProposalButtonWrapper {
